# ros_myo_cpp

./: CMakeLists.txt  README.md  package.xml
msg/: EmgArray.msg
src/: main.cpp
