<?xml version="1.0"?>
<package format="2">
  <name>ros_myo_cpp</name>
  <version>0.0.1</version>
  <description>The ros_myo_cpp package</description>
  
  <maintainer email="ewok261@gmail.com">Aleksandar Levic</maintainer>

  <license>MPL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
